# new_admin_panel_sprint_2

./: .gitignore
01_docker_compose/movies_project/: .example.env  .gitignore  Makefile
01_docker_compose/movies_project/_nginx/: nginx.conf
01_docker_compose/movies_project/app/config/: gunicorn.py  settings.py
01_docker_compose/movies_project/app/config/components/: application.py  database.py  localization.py  security.py  static.py
01_docker_compose/movies_project/app/movies/: constants.py
01_docker_compose/movies_project/app/movies/locale/en/LC_MESSAGES/: django.po
01_docker_compose/movies_project/app/movies/locale/ru/LC_MESSAGES/: django.po
02_django_api/: .example.env  docker-compose.yml  pyproject.toml
02_django_api/_docker/: Dockerfile
02_django_api/_nginx/: site.conf
02_django_api/_postgresql/: init-schema-db.sh
02_django_api/app/config/: db_router.py  gunicorn.py  urls.py
02_django_api/app/config/components/: time.py
02_django_api/app/movies/: admin.py  constants.py  models.py
02_django_api/app/movies/api/v1/: urls.py  views.py
02_django_api/app/movies/migrations/: 0001_initial.py  0002_alter_default_datetime_fileds.py  0003_alter_personfilmwork_role.py
